<resources>
	<string name="settings.background_color_title">Background color</string>
	<string name="settings.background_color_des">Tap to change color of background.</string>
	<string name="settings.enable_background">Change background color</string>
	<string name="settings.enable_back_des">Tap to use custom background color.</string>
	<string name="settings.custom_theme">Change colors</string>
	<string name="settings.custom_theme_des">Use custom colors for theme.</string>
	<string name="pref_smallbutton_color_title">Small Buttons</string>
	<string name="pref_button_color_title">Buttons</string>
	<string name="pref_bottomnavigationbar_color_description">Tap To Change Color Of Bottom Navigation Bar</string>
	<string name="pref_bottombar_color_description">Tap To Change Color Of Bottom Bar</string>
	<string name="statusbartitle">Status Bar</string>
	<string name="pref_bottomnavigationbar_color_title">Bottom Navigation Bar</string>
	<string name="statusbarcolor">Tap To Change Color Of Top Status Bar</string>
	<string name="pref_foreground_color_description">Tap To Change Color Of Top Bar</string>
	<string name="pref_buttons_color_description">Tap To Change Color Of Buttons</string>
	<string name="pref_smallbuttons_color_description">Tap To Change Color Of Small Buttons</string>
	<string name="pref_foreground_color_title">Top Bar</string>
	<string name="pref_bottombar_color_title">Bottom Bar</string>
	<string name="primary_color">Primary Color</string>
	<string name="Select_color">Select A Color</string>
	<string name="accent_color">Accent Color</string>
    <string name="common.appname">Sub Muxic</string>
    <string name="common.ok">OK</string>
    <string name="common.save">Save</string>
    <string name="common.cancel">Cancel</string>
    <string name="common.play_now">Play Now</string>
	<string name="common.play_shuffled">Play Shuffled</string>
    <string name="common.play_next">Play Next</string>
    <string name="common.play_last">Play Last</string>
	<string name="common.download">Cache</string>
    <string name="common.pin">Permanent Cache</string>
    <string name="common.delete">Delete</string>
	<string name="common.star">Star</string>
	<string name="common.unstar">Unstar</string>
	<string name="common.info">Details</string>
	<string name="common.name">Name</string>
	<string name="common.comment">Comment</string>
	<string name="common.public">Public</string>
	<string name="common.play_external">Play Video</string>
	<string name="common.stream_external">Stream Video</string>
	<string name="common.confirm">Confirm</string>
	<string name="common.confirm_message">Do you want to %1$s %2$s?</string>
	<string name="common.confirm_message_cache">cache</string>
	<string name="common.empty">No data</string>
	<string name="common.warning">Warning</string>
	<string name="common.close">Close</string>
	<string name="common.false">No</string>
	<string name="common.true">Yes</string>
	<string name="common.never">Never</string>
    <string name="button_bar.home">Home</string>
    <string name="button_bar.browse">Library</string>
	<string name="button_bar.playlists">Playlists</string>
    <string name="button_bar.now_playing">Now Playing</string>
	<string name="button_bar.podcasts">Podcasts</string>
	<string name="button_bar.bookmarks">Bookmarks</string>
	<string name="button_bar.internet_radio">Internet Radio</string>
	<string name="button_bar.shares">Shares</string>
	<string name="button_bar.chat">Chat</string>
	<string name="button_bar.admin">Admin</string>
	<string name="button_bar.downloading">Downloading</string>
	<string name="button_bar.offline">Offline</string>
    <string name="main.welcome_title">Welcome!</string>
    <string name="main.welcome_text">Welcome to SubMuxic! The app is currently configured to use the Subsonic demo server. After you\'ve
        set up your personal server (available from <b>subsonic.org</b>), please go to <b>Settings</b> and change the configuration to connect to it.</string>
	<string name="main.about_title">About SubMuxic</string>
	<string name="main.faq_title">FAQ</string>
	<string name="main.faq_text">
	<![CDATA[
		<font color="red">Cache vs Permanent Cache</font>:
		<br/>When songs are downloaded by SubMuxic, they can be deleted to make room for new downloads.  Permanently cached music on the other hand will never be automatically deleted.
		<p/><font color="red">ChromeCast fails</font>:
		<br/>Try setting the option Settings -> Playback -> Use device proxy.  It is a work around for Chromecast not accepting self-signed certificates.
		<p/><font color="red">First level in Library are actually groups of artists</font>:
		<br/>In the option menu, deselect "First level artists".  This will make it so that the entire first level of directories shown will be treated like groups of artists instead of the artists themselves.
	]]>
	</string>
	<string name="main.shuffle">Shuffle play</string>
    <string name="main.offline">Go Offline</string>
	<string name="main.online">Go Online</string>
    <string name="main.settings">Settings</string>
    <string name="main.albums_title">Album list</string>
	<string name="main.albums_per_folder">Per Folder</string>
    <string name="main.albums_newest">Recently added</string>
    <string name="main.albums_recent">Recently played</string>
    <string name="main.albums_frequent">Most played</string>
    <string name="main.albums_highest">Top rated</string>
    <string name="main.albums_starred">Starred</string>
    <string name="main.albums_random">Random</string>
	<string name="main.albums_genres">Genres</string>
	<string name="main.albums_year">Decades</string>
	<string name="main.albums_alphabetical">Alphabetically</string>
	<string name="main.videos">Videos</string>
	<string name="main.songs_genres">@string/main.albums_genres</string>
	<string name="main.songs_newest">@string/main.albums_newest</string>
	<string name="main.songs_top_played">Top Played</string>
	<string name="main.songs_recent">@string/main.albums_recent</string>
	<string name="main.songs_frequent">@string/main.albums_frequent</string>
	<string name="main.back_confirm">Press back again to exit</string>
	<string name="main.scan_complete">Completed scan of Server</string>
	<string name="main.artist">Artist</string>
	<string name="main.title">Title</string>
	<string name="menu.search">Search</string>
	<string name="menu.shuffle">Shuffle</string>
	<string name="menu.refresh">Refresh</string>
	<string name="menu.play">Play</string>
	<string name="menu.play_last">Play Last</string>
    <string name="menu.exit">Exit</string>
    <string name="menu.settings">Settings</string>
    <string name="menu.help">Help</string>
	<string name="menu.about">About</string>
	<string name="menu.privacy">Privacy Policy</string>
	<string name="menu.add_playlist">Add To Playlist</string>
	<string name="menu.remove_playlist">Remove From Playlist</string>
	<string name="menu.deleted_playlist">Deleted playlist %s</string>
	<string name="menu.deleted_playlist_error">Failed to delete playlist %s</string>
	<string name="menu.log">Send Log</string>
	<string name="menu.set_timer">Set Timer</string>
	<string name="menu.check_podcasts">Check For New Episodes</string>
	<string name="menu.add_podcast">Add Channel</string>
	<string name="menu.keep_synced">Keep Synced</string>
	<string name="menu.stop_sync">Stop syncing</string>
	<string name="menu.show_all">Show all songs</string>
	<string name="menu.show_artist">Show Artist</string>
	<string name="menu.share">Share</string>
	<string name="menu.delete_cache">Delete Cache</string>
	<string name="menu.cast">Cast To Device</string>
	<string name="menu.faq">FAQ</string>
	<string name="menu.add_user">Add User</string>
	<string name="menu.rescan">Rescan Server</string>
	<string name="menu.rate">Set Rating</string>
	<string name="menu.top_tracks">Last.FM Top Tracks</string>
	<string name="menu.similar_artists">Similar Artists</string>
	<string name="menu.similar_artists.missing">Missing Artists</string>
	<string name="menu.start_radio">Start Radio</string>
	<string name="menu.first_level_artist">First level artists</string>
    <string name="playlist.label">Playlists</string>
	<string name="playlist.update_info">Update Information</string>
	<string name="playlist.updated_info">Updated playlist information for %s</string>
	<string name="playlist.updated_info_error">Failed to update playlist information for %s</string>
	<string name="playlist.overwrite">Overwrite existing playlist</string>
	<string name="playlist.add_to">Add to Playlist</string>
	<string name="playlist.create_new">Create New</string>
	<string name="playlist.delete">Delete Playlist</string>
    <string name="search.label">Search</string>
    <string name="search.title">Search</string>
    <string name="search.search">Click to search</string>
    <string name="search.no_match">No matches, please try again</string>
    <string name="search.artists">Artists</string>
    <string name="search.albums">Albums</string>
    <string name="search.songs">Songs</string>
	<string name="progress.wait">Please wait...</string>
	<string name="progress.artist_info">Loading Artist Bio</string>
	<string name="select_album.n_selected">%d selected.</string>
	<string name="select_album.offline">Offline</string>
	<string name="select_album.no_sdcard">Error: No SD card available.</string>
    <string name="select_album.no_network">Warning: No network available.</string>
	<string name="select_album.no_room">Warning: you only have %s left</string>
    <string name="select_album.not_licensed">Server not licensed. %d trial days left.</string>
    <string name="select_album.donate_dialog_message">Get unlimited downloads by donating to Subsonic.</string>
    <string name="select_album.donate_dialog_now">Now</string>
    <string name="select_album.donate_dialog_later">Later</string>
    <string name="select_album.donate_dialog_0_trial_days_left">Trial period is over</string>
    <string name="offline.sync_dialog_title">Offline songs waiting to be synced</string>
    <string name="offline.sync_dialog_message">Process %1$d offline scrobbles?
		\nProcess %2$d offline stars?
	</string>
	<string name="offline.sync_dialog_default">Use action as default</string>
	<string name="offline.sync_success">Successfully synced %1$d songs</string>
	<string name="offline.sync_partial">Successfully synced %1$d of %2$d songs</string>
	<string name="offline.sync_error">Failed to sync songs</string>
	<string name="select_genre.blank">Blank</string>
	<string name="select_genre.songs">%d songs</string>
	<string name="select_genre.albums">%d albums</string>
	<string name="select_podcasts.error">This podcast had an error while downloading on the server.  The server must download it first.</string>
	<string name="select_podcasts.skipped">This podcast has not been downloaded on the server.  The server must download it first.</string>
    <string name="select_podcasts.initializing">This podcast channel is being initialized on the server.  Please reload after a moment.</string>
	<string name="select_podcasts.server_download">Download on server</string>
	<string name="select_podcasts.server_delete">Delete from server</string>
	<string name="select_podcasts.downloading">Now downloading %s on the server</string>
	<string name="select_podcasts.refreshing">The server is checking for new podcasts now</string>
	<string name="select_podcasts.deleted">Deleted podcast %s</string>
	<string name="select_podcasts.deleted_error">Failed to delete podcast %s</string>
	<string name="select_podcasts.add_url">URL:</string>
	<string name="select_podcasts.created_error">Failed to add podcast</string>
	<string name="select_podcasts.invalid_podcast_channel">Invalid podcast channel: %s</string>
	<string name="select_podcasts.delete">Delete podcast</string>
	<string name="select_podcasts.channels">Podcast Channels</string>
    <string name="download.empty">Playlist is empty</string>
</resources>