<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/settings.appearance_title">

	<PreferenceCategory
		android:title="@string/settings.theme_title">

		<ListPreference
			android:title="@string/settings.theme_title"
			android:key="theme"
			android:defaultValue="dark"
			android:entryValues="@array/themeValues"
			android:entries="@array/themeNames"/>


		<com.gloxandro.submuxic.colors.MaterialColorPreference
			android:defaultValue="@color/deep_black"
			android:dialogTitle="@string/statusbartitle"
			android:key="statusColor"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"
			android:summary="@string/statusbarcolor"
			android:title="@string/statusbartitle"
			app:itemLayout="@layout/pref_layout_color" />


		<com.gloxandro.submuxic.colors.MaterialColorPreference
			android:defaultValue="@color/deep_black"
			android:dialogTitle="@string/pref_foreground_color_title"
			android:key="primaryColor"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"
			android:summary="@string/pref_foreground_color_description"
			android:title="@string/pref_foreground_color_title"
			app:color_type="primary"
			app:itemLayout="@layout/pref_layout_color" />


		<com.gloxandro.submuxic.colors.MaterialColorPreference
			android:defaultValue="@color/deep_black"
			android:dialogTitle="@string/pref_bottombar_color_title"
			android:key="bottombar"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"
			android:summary="@string/pref_bottombar_color_description"
			android:title="@string/pref_bottombar_color_title"
			app:color_type="primary"
			app:itemLayout="@layout/pref_layout_color" />


		<com.gloxandro.submuxic.colors.MaterialColorPreference
			android:defaultValue="@color/deep_black"
			android:dialogTitle="@string/pref_bottomnavigationbar_color_title"
			android:key="bottomnavigationbar"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"
			android:summary="@string/pref_bottomnavigationbar_color_description"
			android:title="@string/pref_bottomnavigationbar_color_title"
			app:color_type="primary"
			app:itemLayout="@layout/pref_layout_color" />



		<com.gloxandro.submuxic.colors.MaterialColorPreference
			android:defaultValue="@color/deep_orange"
			android:dialogTitle="@string/pref_smallbutton_color_title"
			android:key="smallbuttons"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"
			android:summary="@string/pref_smallbuttons_color_description"
			android:title="@string/pref_smallbutton_color_title"
			app:color_type="primary"
			app:itemLayout="@layout/pref_layout_color" />

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/settings.appearance_title">

		<CheckBoxPreference
			android:title="@string/settings.track_title"
			android:summary="@string/settings.track_summary"
			android:key="displayTrack"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/settings.hide_widget_title"
			android:summary="@string/settings.hide_widget_summary"
			android:key="hideWidget"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/settings.custom_sort"
			android:summary="@string/settings.custom_sort_summary"
			android:key="customSortEnabled"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/settings.rename_duplicates"
			android:summary="@string/settings.rename_duplicates_summary"
			android:key="renameDuplicates"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/settings.disable_exit_prompt"
			android:summary="@string/settings.disable_exit_prompt_summary"
			android:key="disableExitPrompt"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/settings.override_system_language"
			android:summary="@string/settings.override_system_language_summary"
			android:key="overrideSystemLanguage"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/settings.large_album_art"
			android:summary="@string/settings.large_album_art_summary"
			android:key="largeAlbumArt"
			android:defaultValue="true"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/settings.menu_options.title">

		<CheckBoxPreference
			android:title="@string/common.play_now"
			android:summary="@string/settings.menu_options.play_now_summary"
			android:key="showPlayNow"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/common.play_shuffled"
			android:summary="@string/settings.menu_options.play_shuffled_summary"
			android:key="showPlayShuffled"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/common.play_next"
			android:summary="@string/settings.menu_options.play_next_summary"
			android:key="showPlayNext"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/common.play_last"
			android:summary="@string/settings.menu_options.play_last_summary"
			android:key="showPlayLast"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/common.download"
			android:summary="@string/settings.menu_options.download_summary"
			android:key="showDownload"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/common.pin"
			android:summary="@string/settings.menu_options.pin_summary"
			android:key="showPin"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/common.delete"
			android:summary="@string/settings.menu_options.delete_summary"
			android:key="showDelete"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:title="@string/common.star"
			android:summary="@string/settings.menu_options.star_summary"
			android:key="showStar"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/menu.share"
			android:summary="@string/settings.menu_options.shared_summary"
			android:key="showShared"
			android:defaultValue="true"/>

		<CheckBoxPreference
			android:title="@string/menu.rate"
			android:summary="@string/settings.menu_options.rate_summary"
			android:key="showRating"
			android:defaultValue="true"/>
	</PreferenceCategory>
</PreferenceScreen>